# bmstu_cpp_course

./: deepseek_cpp_20260408_b636cc.cpp
tasks/: 3  3.cpp  9  9..cpp  CMakeLists.txt  ex  ex.cpp  test  test.cpp
tasks/bmstu_map/: CMakeLists.txt
tasks/bmstu_map/task_map/: CMakeLists.txt  bmstu_map_test.cpp
tasks/bmstu_optional/: CMakeLists.txt
tasks/bmstu_optional/optional/: CMakeLists.txt  bmstu_optional.h
